--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1569,6 +1569,7 @@ input, select, textarea {
 /* Box */
 
 	.box {
+		height: 100%;
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
 		padding: 2.75em 1.75em 2.75em 1.75em;
